Fix spy family trads using real cards, and make it visible on phone

--- a/trads/style-on-rem.css
+++ b/trads/style-on-rem.css
@@ -4,27 +4,16 @@
     src: url('./impact.ttf');
 }
 
-:root {
-    /* font-size: 86px; */
-}
-
-[class$="desc"] {
-    /* font-weight: 400 !important; */
-}
-
-img {
-    /* object-fit: cover !important; */
-}
-
 /* The most common card size for board games is 2.5 x 3.5 inches (63.5 x 88.9 mm).  */
 
 body {
-    padding: 3rem;
     display: grid;
     grid-template-columns: repeat(3, min-content);
-    gap: 2rem;
     background-color: #888;
     width: min-content;
+    /* for testing on screen */
+    /* scale: 1.17;
+    translate: 100% */
 }
 
 img {
@@ -60,28 +49,30 @@ body>img {
 }
 
 body>.card:nth-child(9) {
-    outline-color: red;
+   break-after: page;
 }
 
 
 /* @media print { */
 
 @page {
-    margin: 0.5cm;
+    margin: 0cm;
+    margin-top: 1cm;
+    margin-bottom: 1cm; 
     size: a4 portrait;
 }
 
 body {
-    min-width: 21cm !important;
+    max-width: 21cm;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-wrap: wrap;
     padding: 0;
     gap: 0.5cm;
+    justify-content: center;
     background-color: transparent;
-}
-
-body>.card:nth-child(9) {
-    margin-bottom: 6cm;
 }
 
 body>img {
@@ -119,9 +110,9 @@ body>img {
 [class$="desc"] {
     display: grid;
     place-content: center;
-    font-size: 0.51rem;
+    font-size: 2.5mm;
     line-height: 150%;
-    /* font-weight: lighter; */
+    font-weight: 300;
     letter-spacing: 0.0575rem;
     word-spacing: -0.07rem;
     text-align: center;
@@ -131,15 +122,12 @@ body>img {
 }
 
 [class$="desc"] b {
-    font-weight: 600;
-    font-size: 112%;
-    letter-spacing: 0.125rem;
+    font-weight: 500;
 }
 
 [class$="desc"] span {
-    padding: 0 1.125rem;
+    padding: 0 3mm 0mm 5mm;
 }
-
 
 [class$="title"] {
     width: max-content;
@@ -151,9 +139,11 @@ body>img {
     z-index: 1;
     mix-blend-mode: darken
 }
+
 .power-title {
     mix-blend-mode: lighten;
 }
+
 .power-title,
 .power-desc {
     color: white;
@@ -164,12 +154,12 @@ body>img {
 .deploy-desc {
     color: black;
     background-color: var(--card-color);
-    margin-right: 0.875rem;
+    margin-right: 1mm;
 }
 
 .power-desc {
-    height: 3.3rem;
-    margin-left: 1.4375rem;
+    height: 15mm;
+    margin-left: 4mm;
     clip-path: polygon(0% 0%, 100% 0%, 100% 76%, 6% 100%);
 }
 
@@ -178,9 +168,8 @@ body>img {
 }
 
 .deploy-desc {
-    height: 3.54rem;
-    font-size: 0.6rem;
-    margin-right: 1.125rem;
+    height: 17mm;
+    margin-right: 1.5mm;
     clip-path: polygon(0% 20%, 100% 0%, 95% 100%, 0 90%);
     translate: 0rem calc(-1 * var(--translate-down) - 0.25rem);
 }
@@ -191,9 +180,11 @@ body>img {
 }
 
 .power-title {
-    width: 3.3rem;
+    box-sizing: border-box;
+    width: 17mm;
+    height: 7mm;
     text-align: center;
-    margin-left: 1rem;
+    margin-left: 2mm;
     transform: rotate(2deg);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 3% 100%);
 }
@@ -208,8 +199,16 @@ body>img {
 .power-title,
 .deploy-title {
     font-family: "Impact";
-    letter-spacing: 0.0875rem;
-    font-size: 0.9rem;
+    letter-spacing: 0.25mm;
+    font-size: 4mm;
+}
+
+[data-pid="aux"] {
+    letter-spacing: 0.09mm;
+}
+
+[data-pid="special"] {
+    letter-spacing: 0.1mm;
 }
 
 [class^="wrapper"] {
@@ -245,35 +244,46 @@ body>img {
     grid-template-rows: auto 1fr;
     grid-template-columns: 10.75rem auto;
     margin-bottom: auto;
-    margin-top: 1.86rem;
+    margin-top: 5mm;
     filter: brightness(1);
     font-family: 'Impact';
 }
 
 .card-title,
 .card-x {
-    text-shadow:
-        0.06125rem 0.06125rem 0 white,
-        0.06125rem -0.06125rem 0 white,
-        -0.06125rem 0.06125rem 0 white,
-        -0.06125rem -0.06125rem 0 white;
-    /* unchanged */
+    -webkit-text-stroke: 0.15mm white;
 }
 
 .card-title {
     padding: 0;
     grid-area: TITLE;
-    margin-left: 1.6875rem;
+    margin-left: 5mm;
     letter-spacing: 0.1rem;
     line-height: 1;
-    font-size: 1.8rem;
+    font-size: 8mm;
+    font-weight: bold;
+    -webkit-text-stroke-width: 0.01mm;
+}
 
+.card[data-cid="info"] .card-title,
+.card[data-cid="sp"] .card-title {
+    font-size: 6.7mm;
+    line-height: 120%;
+}
+
+.card-x b {
+    font-family: "Source Code Pro", monospace;
+    font-weight: 900;
+    -webkit-text-stroke-width: 0.1mm;
+    position: absolute;
+    right: 4mm;
+    font-size: 4mm;
 }
 
 .card-subtitle {
     font-size: 0.8rem;
     padding: 0;
-    margin-left: 1.4125rem;
+    margin-left: 3mm;
     letter-spacing: 0.02210rem;
     word-spacing: 0.01rem;
     grid-area: SUB;
@@ -287,31 +297,27 @@ body>img {
     font-size: 0.8rem;
     gap: 0.4em;
     grid-area: X;
-    display: flex;
-    align-items: start;
     flex-direction: column;
 }
-
-.card-x:has(div[style]) div[style] {
-   translate: 0.5em;
-}
-
 
 .card-x div {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     text-align: center;
-    width: 100%;
-    gap: 0.4em;
+    /* gap: 0.4em; */
+    margin-right: 7mm;
 }
 
 .cross {
     font-family: sans-serif;
     display: inline-block;
     line-height: 50%;
-    font-size: 325%;
+    /* real-size * 2 */
+    font-size: 12mm;
     rotate: 45deg;
+    /* fix spacing, compensante for rotation */
+    letter-spacing: -1mm;
 }
 
 :root {
@@ -377,24 +383,8 @@ body>img {
     color: var(--blue-bayoux)
 }
 
-/* debug styling 
- 
- [class^="wrapper"] {
-     filter: none;
- }
-
- [class^="wrapper"] div {
-     mix-blend-mode: difference;
-     background-color: purple;
-     opacity: 0.4;
-     color: white;
-     outline: 0.25rem solid red;
- }
-*/
-
-.card {
-    /* background-image: none !important; */
+@media not print {
+    body {
+      margin-top: 2rem;
+    }
 }
-
-/* 
-  style="--card-color: #fed3cc;  background-image: linear-gradient(100deg,#d07c79 50%, #b04647 50%), url(./dots.svg), linear-
